Bug 150150 - [Calc][UI] Comment indicator is hidden behind the AutoFilter dropdown
Summary: [Calc][UI] Comment indicator is hidden behind the AutoFilter dropdown
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.0.6.3 release
Hardware: All All
: medium minor
Assignee: Justin L
URL:
Whiteboard: target:26.2.0 target:25.8.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: AutoFilter
  Show dependency treegraph
 
Reported: 2022-07-26 09:32 UTC by Willem Ligtenberg
Modified: 2025-11-24 12:04 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
test case (9.43 KB, application/vnd.oasis.opendocument.spreadsheet)
2022-07-26 09:54 UTC, Willem Ligtenberg
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Willem Ligtenberg 2022-07-26 09:32:37 UTC
Description:
When looking at a document that has AutoFilter on and comments in the AutoFilter row, the visual indicator is not visible.
This caused me to think there were no comments, until someone mentioned they existed.

Steps to Reproduce:
1. Create blank spreadsheet
2. Insert a comment on A1 (and see the visual indicator)
3. Enable AutoFilter (and see that the visual indicator is now behind the dropdown)

Or download the following file and see instantly:
https://nextcloud.wligtenberg.nl/s/Y8cf2e6Xxtxm3ek

Actual Results:
There is no visual indication of comments visible.

Expected Results:
Always be able to see visual indicators for all comments.


Reproducible: Always


User Profile Reset: No


OpenGL enabled: Yes

Additional Info:
Version: 7.3.4.2 / LibreOffice Community
Build ID: 30(Build:2)
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Ubuntu package version: 1:7.3.4-0ubuntu0.22.04.1
Calc: threaded
Comment 1 Willem Ligtenberg 2022-07-26 09:54:05 UTC
Created attachment 181417 [details]
test case
Comment 2 Timur 2022-07-26 11:23:42 UTC
Repro Lin, Win. 
This was better with GEN in LO 4.4 so I mark regression from 5.0.
Comment 3 Timur 2022-07-26 11:33:34 UTC
Bisected in 5.0:
author	Laurent Godard <lgodard.libre@laposte.net>	2015-05-19 
committer	Markus Mohrhard <markus.mohrhard@googlemail.com>	2015-05-19
commit 2d1abfff0156c17cdaabf27c01e92b5e3f0bbbf4 
draw Note mark before text for correct ZOrder tdf#89182
the cell content is now drawn over the cell note rectangle

Autor is not active since 2018.
Comment 4 Willem Ligtenberg 2022-11-16 14:18:04 UTC
It has been a while and nothing much seems to have happened.
Is there something I can do to help out?
It seems the specific commit introducing this error has been located, can I help by making a path out if it? (I would obviously need to set up my system for libre office development)
Comment 5 Roman 2024-05-27 06:19:08 UTC
(In reply to Willem Ligtenberg from comment #4)
> Прошло некоторое время, и, похоже, ничего особенного не произошло.
> Могу ли я что-нибудь сделать, чтобы помочь?
> Кажется, обнаружен конкретный коммит, приводящий к этой ошибке, могу ли я
> помочь, указав путь к выходу, если это так? (Очевидно, мне нужно будет
> настроить свою систему для разработки libre office)

Did you have a comment displayed in the filter cell?
У тебя не отображался комментарий в ячейке фильтра?
Comment 6 Eyal Rozenberg 2024-09-17 20:04:24 UTC
Annoying indeed :-(
Comment 7 Commit Notification 2025-11-22 00:33:12 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4af60823276927c2b8481326cb30a246d5c0a141

tdf#150150 Revert "draw Note mark before text for correct ZOrder"

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-11-24 12:04:42 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/45a0bb0d209d6b5ace519ed13de890f79e43fe9a

tdf#150150 Revert "draw Note mark before text for correct ZOrder"

It will be available in 25.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.