tdf#150150 Revert "draw Note mark before text for correct ZOrder"

This reverts 5.0 commit 2d1abfff0156c17cdaabf27c01e92b5e3f0bbbf4.

The comment marker is not nearly as obstructive
as it was back in 5.0 days.

Change-Id: Id5596be2ede154e5c9302a23853b5fcaf724c1c7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194343
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194429